[package]
name = "implicitization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
roots = "0.0.8"
glam = "*"
approx = "0.5.1"
polynomial-roots = "1.0.0"

[dev-dependencies]
approx = "0.5.1"
